scss/_section-details-content.scss
@import "./variable";

.section_details-content {
  padding-top: 31px;
}

// Put the arrow on the text
.details_content-breadcrumb {
  position: relative;
}

.breadcrumb-link {
  color: $common-font-color;
  padding-left: calc(14px + 10px);
}

.breadcrumb-link::before {
  content: "";
  background-image: url("#{$image-path}icon_arrow_left.svg");
  display: block;
  position: absolute;
  top: 5px;
  left: 0;
  width: 14px;
  height: 8px;
}

// For the header article: "details_content-header-article"
.details_content-heading {
  font-size: 52px;
 }

.details_content-header-paragraph {
  font-size: 18px;
}

// Styling the figure and the images in it
.details_content-figure {
  display: grid;
  grid-gap: 9px;
  padding-top: calc(82px - 32px);
  padding-bottom: calc(92px - 32px);
  overflow: auto;
}

.active-picture {
  grid-column: 1/9;
}

.image-active,
.details_content-figure-picture {
  max-width: 274px;
  max-height: 170px;
}

.small-image,
.image-active {
  border-radius: 5px;
}

.small-image {
  max-width: 137px;
  max-height: 85px;
}

.not-active {
  opacity: 0.5;
}

// Information about the images.
.photo_information-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 40px;
}

.photo_information-list-item {
  display: flex;
  flex-direction: column;
}

.information-detail {
  font-weight: $font-bold;
}
 
// Summary article.
.summary_article-heading {
  font-size: 40px;
}

.details_content-summary-article {
  padding-top: 75px;
  padding-bottom: 105px;
}

.summary_article-header-paragraph {
  padding-top: 31px;
}

.summary_article-paragraph,
.summary_article-header-paragraph {
  padding-bottom: 31px;
}

.summary_article-paragraph,
.information_title {
  color: $common-font-color;
}

.summary_article-heading,
.summary_article-header-paragraph,
.summary_article-paragraph,
.details_content-breadcrumb,
figure {
  margin: 0;
}

@media (min-width: $break-point-medium) {
  .image-active,
  .details_content-figure-picture {
    max-width: 346px;
    max-height: 215px;
  }
}


// For desktop.
@media (min-width: $break-point-large) {

  // Styling the header article.
  .section_details-content {
    display: grid;
    grid-gap: 2rem;
  }

  .details_content-heading {
    font-size: 72px;
    max-width: 457px;
  }

  // Styling the summary article.
  .details_content-summary-article {
    grid-column: 2;
    padding-top: 0;
  }

  .summary_article-heading {
    line-height: 62px;
    font-size: 52px;
  }

  .summary_article-header-paragraph {
    padding-bottom: 38px;
  }

  .summary_article-paragraph {
    padding-bottom: 55px;
  }

  // Styling the figure and the images in it.
  .details_content-figure {
    grid-column: 1/3;
    max-width: 1170px;
    overflow: visible;
  }

  .image-active,
  .details_content-figure-picture {
    max-width: 1170px;
    max-height: 728px;
  }

  .photo_information-list {
    max-width: 443px;
    max-height: 152px;
    align-items: flex-end;
    grid-column: 1;
  }

}

